Update favicon for browser tab

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="kKQ31cyIOZOEjEr0Nyi9F4uTYH2Y9V9aRApDsYOyyOs" />
-    <link rel="icon" type="image/png" href="/ai-logo1.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <title>Pradeep Tech Hub</title>
   </head>
   <body>
